--- a/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
@@ -28,14 +28,26 @@
     {
       "cell_type": "code",
       "source": [
-        "nome =\n",
+        "nome = 'Fabio Renato Zocal Mazza'\n",
         "print(f'Meu nome é {nome}')"
       ],
       "metadata": {
-        "id": "jOdQB41_4ZxG"
+        "id": "jOdQB41_4ZxG",
+        "outputId": "93a00f07-e0bc-449f-ed3e-d4b0bf71a42b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Meu nome é Fabio Renato Zocal Mazza\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -82,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3twP0YJC4jmJ",
-        "outputId": "803b68c7-9fc6-4a76-bdd7-d1ba66234a23"
+        "outputId": "f7be6cd8-3f53-48e3-85ee-09f74dd83a50"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,36 +105,36 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting transformers\n",
             "  Downloading transformers-4.19.2-py3-none-any.whl (4.2 MB)\n",
-            "\u001b[K     |████████████████████████████████| 4.2 MB 29.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 4.2 MB 14.2 MB/s \n",
             "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.3)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.11.4)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.7.0)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.21.6)\n",
             "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.64.0)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
             "Collecting huggingface-hub<1.0,>=0.1.0\n",
-            "  Downloading huggingface_hub-0.6.0-py3-none-any.whl (84 kB)\n",
-            "\u001b[K     |████████████████████████████████| 84 kB 3.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.11.3)\n",
-            "Collecting tokenizers!=0.11.3,<0.13,>=0.11.1\n",
-            "  Downloading tokenizers-0.12.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (6.6 MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.6 MB 53.1 MB/s \n",
+            "  Downloading huggingface_hub-0.7.0-py3-none-any.whl (86 kB)\n",
+            "\u001b[K     |████████████████████████████████| 86 kB 6.9 MB/s \n",
             "\u001b[?25hCollecting pyyaml>=5.1\n",
             "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
-            "\u001b[K     |████████████████████████████████| 596 kB 59.7 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.21.6)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.7.0)\n",
+            "\u001b[K     |████████████████████████████████| 596 kB 65.0 MB/s \n",
+            "\u001b[?25hCollecting tokenizers!=0.11.3,<0.13,>=0.11.1\n",
+            "  Downloading tokenizers-0.12.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (6.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 6.6 MB 67.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (4.2.0)\n",
             "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=20.0->transformers) (3.0.9)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->transformers) (3.8.0)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (1.24.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2.10)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2022.5.18.1)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2.10)\n",
             "Installing collected packages: pyyaml, tokenizers, huggingface-hub, transformers\n",
             "  Attempting uninstall: pyyaml\n",
             "    Found existing installation: PyYAML 3.13\n",
             "    Uninstalling PyYAML-3.13:\n",
             "      Successfully uninstalled PyYAML-3.13\n",
-            "Successfully installed huggingface-hub-0.6.0 pyyaml-6.0 tokenizers-0.12.1 transformers-4.19.2\n"
+            "Successfully installed huggingface-hub-0.7.0 pyyaml-6.0 tokenizers-0.12.1 transformers-4.19.2\n"
           ]
         }
       ]
@@ -154,7 +166,7 @@
         "from torch.utils.data import DataLoader\n",
         "from tqdm import tqdm_notebook\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -164,10 +176,41 @@
         "!nvidia-smi"
       ],
       "metadata": {
-        "id": "w9f3PfifAwpU"
+        "id": "w9f3PfifAwpU",
+        "outputId": "a475077f-9d34-4827-8918-3250207b58ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fri Jun  3 20:57:46 2022       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   34C    P0    26W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -180,10 +223,22 @@
         "print('Using {}'.format(device))"
       ],
       "metadata": {
-        "id": "whTCe2i7AtoV"
+        "id": "whTCe2i7AtoV",
+        "outputId": "fd21c4b0-0698-4abe-b4b4-5e78dad4f8d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using cuda:0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -210,19 +265,73 @@
         "\n",
         "class MyDataset():\n",
         "    def __init__(self, texts: List[str], tokenizer, max_seq_length: int):\n",
-        "        # Escreva aqui seu código.\n",
         "        \n",
+        "        self.max_seq_length = max_seq_length\n",
+        "        cls = 101\n",
+        "\n",
+        "        for text in tqdm_notebook(texts):\n",
+        "          inputs = tokenize(text, tokenizer)\n",
+        "          inputs = [cls] + inputs\n",
+        "          inputs = torch.FloatTensor(inputs)\n",
+        "          pad_size = max_seq_length - inputs.size(dim=0) % max_seq_length\n",
+        "          inputs = torch.cat((inputs, torch.zeros(pad_size)), dim=0)\n",
+        "          inputs = inputs.reshape((-1, max_seq_length))\n",
+        "\n",
+        "          targets = torch.roll(inputs, -1, 1)\n",
+        "          targets[:, -1] = 0\n",
+        "\n",
+        "          self.inputs = inputs\n",
+        "          self.targets = targets\n",
         "\n",
         "    def __len__(self):\n",
-        "        # Escreva aqui seu código.\n",
-        "        return\n",
+        "        return len(self.inputs)\n",
         "\n",
         "    def __getitem__(self, idx):\n",
-        "        # Escreva aqui seu código.\n",
-        "        return"
+        "        return self.inputs[idx], self.targets[idx]"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokens = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+        "max_seq_length = 5\n",
+        "tokens = [101] + tokens\n",
+        "tokens = torch.tensor(tokens, dtype = torch.int16)\n",
+        "pad_size = max_seq_length - tokens.size(dim=0) % max_seq_length\n",
+        "tokens = torch.cat((tokens, torch.zeros(pad_size, dtype=torch.int16)), dim=0)\n",
+        "tokens = tokens.reshape((-1, max_seq_length))\n",
+        "tokens\n",
+        "\n",
+        "targets = torch.roll(tokens, -1, 1)\n",
+        "targets[:, -1] = 0\n",
+        "\n",
+        "print(tokens)\n",
+        "print(targets)"
+      ],
+      "metadata": {
+        "id": "cU5C22uoeVTv",
+        "outputId": "7e12c226-79ba-490d-be11-4d4126420bb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[101,   0,   1,   2,   3],\n",
+            "        [  4,   5,   6,   7,   8],\n",
+            "        [  9,  10,  11,   0,   0]], dtype=torch.int16)\n",
+            "tensor([[ 0,  1,  2,  3,  0],\n",
+            "        [ 5,  6,  7,  8,  0],\n",
+            "        [10, 11,  0,  0,  0]], dtype=torch.int16)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
