--- a/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
@@ -356,6 +356,348 @@
             "_view_name": "StyleView",
             "description_width": ""
           }
+        },
+        "a47eedd916ab46a4b7e257e6da9c6fbc": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_e93dae8926a1489c9d40fc48b0fc9cda",
+              "IPY_MODEL_0a90b66b36ca4ffcaa313251405aab04",
+              "IPY_MODEL_e537f85583aa48f4af04d8783f841c05"
+            ],
+            "layout": "IPY_MODEL_619a89cc786240f2bde386d2a78da693"
+          }
+        },
+        "e93dae8926a1489c9d40fc48b0fc9cda": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HTMLModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HTMLView",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_c1130daa4fe542a7860c84c2148fac2d",
+            "placeholder": "​",
+            "style": "IPY_MODEL_ebb4f358f9684356a1bb940559857730",
+            "value": "100%"
+          }
+        },
+        "0a90b66b36ca4ffcaa313251405aab04": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "FloatProgressModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "ProgressView",
+            "bar_style": "success",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_1423621e0f4d49adabd9fbcab765f0a8",
+            "max": 2,
+            "min": 0,
+            "orientation": "horizontal",
+            "style": "IPY_MODEL_6f1d662a2a9c40f7ac9388278d02be85",
+            "value": 2
+          }
+        },
+        "e537f85583aa48f4af04d8783f841c05": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HTMLModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HTMLView",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_a68349d66fed4b2abec9d3f58e4c9493",
+            "placeholder": "​",
+            "style": "IPY_MODEL_6f790ccff3f44f01b11f630f70f3e0b6",
+            "value": " 2/2 [00:00&lt;00:00, 29.32it/s]"
+          }
+        },
+        "619a89cc786240f2bde386d2a78da693": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "c1130daa4fe542a7860c84c2148fac2d": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "ebb4f358f9684356a1bb940559857730": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
+        },
+        "1423621e0f4d49adabd9fbcab765f0a8": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "6f1d662a2a9c40f7ac9388278d02be85": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ProgressStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "bar_color": null,
+            "description_width": ""
+          }
+        },
+        "a68349d66fed4b2abec9d3f58e4c9493": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "6f790ccff3f44f01b11f630f70f3e0b6": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
         }
       }
     }
@@ -723,26 +1065,84 @@
     {
       "cell_type": "code",
       "source": [
-        "dummy_dataset"
+        "## Teste com frases longas\n",
+        "\n",
+        "dummy_texts = ['Os primeiros socorros foram feitos no local e a vítima foi levada \\\n",
+        "ao Hospital de Base de Brasília com ferimentos leves, consciente e com estado de saúde estável.', \n",
+        "'Um veículo capotou na Via Estrutural na tarde desta sexta-feira (3), por volta das 15h. O Corpo\\\n",
+        " de Bombeiros Militar do Distrito Federal (CBMDF) foi chamado ao local para realizar os primeiros atendimentos à vítima.']\n",
+        "\n",
+        "dummy_dataset = MyDataset(texts=dummy_texts, tokenizer=tokenizer, max_seq_length=9)\n",
+        "dummy_loader = DataLoader(dummy_dataset, batch_size=6, shuffle=False)\n",
+        "\n",
+        "first_batch_input, first_batch_target = next(iter(dummy_loader))\n",
+        "\n",
+        "print(first_batch_input)\n",
+        "print(first_batch_target)"
       ],
       "metadata": {
-        "id": "D90a9Z9AozmJ",
-        "outputId": "8322e747-2a98-4b17-84c3-d568a7d33224",
+        "id": "hV8mOhS90Mdt",
+        "outputId": "d2a84bcf-39e1-40ff-a171-c6b38dd63407",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 309,
+          "referenced_widgets": [
+            "a47eedd916ab46a4b7e257e6da9c6fbc",
+            "e93dae8926a1489c9d40fc48b0fc9cda",
+            "0a90b66b36ca4ffcaa313251405aab04",
+            "e537f85583aa48f4af04d8783f841c05",
+            "619a89cc786240f2bde386d2a78da693",
+            "c1130daa4fe542a7860c84c2148fac2d",
+            "ebb4f358f9684356a1bb940559857730",
+            "1423621e0f4d49adabd9fbcab765f0a8",
+            "6f1d662a2a9c40f7ac9388278d02be85",
+            "a68349d66fed4b2abec9d3f58e4c9493",
+            "6f790ccff3f44f01b11f630f70f3e0b6"
+          ]
         }
       },
-      "execution_count": 9,
+      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:16: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+            "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+            "  app.launch_new_instance()\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<__main__.MyDataset at 0x7fa129837950>"
-            ]
+              "  0%|          | 0/2 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "a47eedd916ab46a4b7e257e6da9c6fbc"
+            }
           },
-          "metadata": {},
-          "execution_count": 9
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[  101,   533,  1867, 19279,   444,   506,  5159,   202,  1238],\n",
+            "        [  122,   123,  8329,   262, 11067,   320,  6297,   125,  8831],\n",
+            "        [  125,  6191,   170, 16811, 14698,   117, 19054,   122,   170],\n",
+            "        [ 1177,   125,  3231, 12055,   119,     0,     0,     0,     0],\n",
+            "        [  101,  1263,  7594,   853,  3356,   203,   229,  7811,  9009],\n",
+            "        [  381,  1441,   229,  1373,  1014,  7250,   118, 14258,   113]])\n",
+            "tensor([[  533,  1867, 19279,   444,   506,  5159,   202,  1238,     0],\n",
+            "        [  123,  8329,   262, 11067,   320,  6297,   125,  8831,     0],\n",
+            "        [ 6191,   170, 16811, 14698,   117, 19054,   122,   170,     0],\n",
+            "        [  125,  3231, 12055,   119,     0,     0,     0,     0,     0],\n",
+            "        [ 1263,  7594,   853,  3356,   203,   229,  7811,  9009,     0],\n",
+            "        [ 1441,   229,  1373,  1014,  7250,   118, 14258,   113,     0]])\n"
+          ]
         }
       ]
     },
